@@ -31,3 +31,4 @@ Roadmap for in 0.1.7
 - Add get_api_type method to VIServer
 - Several fixes
 - Changes in ZSI framework to ease portability to python 3
+- Allow to clone from snapshot, shared disks, and select destination datastore
